# rdedup

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  rust.yml
lib/: Cargo.toml
lib/src/: chunking.rs  compression.rs  error.rs  generation.rs  hashing.rs  lib.rs  name.rs  reading.rs  settings.rs  tests.rs
lib/src/aio/: http.rs  local.rs  local_cache.rs  mod.rs
lib/src/config/: mod.rs
lib/src/util/: serde.rs
src/: bin.rs
tester/src/: bin.rs
